# CableLaying

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
config/: RoadConfig.h  RoadConfigParser.cpp  RoadConfigParser.h
data/: graph.geojson  graphHddOnly.geojson  roadconfig.json  roads.geojson
geometry/: HddEdge.h  HddResolver.cpp  HddResolver.h  PolygonMerger.cpp  PolygonMerger.h  Types.h  constants.h
graph/: Component.h  ComponentEdge.h  ComponentsConnector.cpp  ComponentsConnector.h  GraphResolver.cpp  GraphResolver.h  GraphType.h  MinimalEdgeFinder.cpp  MinimalEdgeFinder.h  UnionFinder.cpp  UnionFinder.h  utils.h
json/: GeoJsonEncoder.cpp  GeoJsonEncoder.h  GeoJsonParser.cpp  GeoJsonParser.h  JsonReader.cpp  JsonReader.h  JsonWriter.cpp  JsonWriter.h  RoadConfigParser.cpp
primitives/: Edge.h  LineString.h  Point.h  Polygon.cpp  Polygon.h  primitives_converter.h
roads/: RoadEdge.h  RoadNode.h  RoadsMerger.cpp  RoadsMerger.h
